fix a z-index issue with overlapping columns and menu

--- a/src/blocks/overlapping-columns-block/wrapper/style.scss
+++ b/src/blocks/overlapping-columns-block/wrapper/style.scss
@@ -17,7 +17,7 @@
 
 			&:nth-of-type(1) {
 				grid-column: 1 / 13;
-				z-index: 100;
+				z-index: 10;
 				text-shadow: 0 0 10px black;
 				box-sizing: border-box;
 				position: relative;
